--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="personalInformation" class="backgroundWindow">
 		<div class="window">
-			<h1>Прізвище ім'я побатькові, група, число.</h1>
+			<h1>Прізвище, ім'я, по-батькові, група, число.</h1>
 			<input type="text">
 			<a class="button" id="extendStart" onclick="return">Продовжити</a>
 		</div>
@@ -21,7 +21,7 @@
 	</div>
 	<div id="test">
 		<h1>Я ХОЧУ І МОЖУ</h1>
-		<h3>Можна оберати і одне, і два, і три бажання. Лиш би вони були «твоїми», запозиченими із власного досвіду.</h3>
+		<h3>Можна обирати і одну, і дві, і три відповіді. Аби вони були «твоїми», запозиченими із власного досвіду.</h3>
 	</div>
 	<a class="button" id="extend" onclick="return">Продовжити</a>
 	<div id="scheduleWindow">
