--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="personalInformation" class="backgroundWindow">
 		<div class="window">
-			<h1>Прізвище, ім'я, по-батькові, група, число.</h1>
+			<h1>Прізвище, ім'я, по батькові, група, число.</h1>
 			<input type="text">
 			<a class="button" id="extendStart" onclick="return">Продовжити</a>
 		</div>
